...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        app:srcCompat="@drawable/dallmann" />

    <EditText
        android:id="@+id/editEmailLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/editPasswordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/textEmail"
        android:inputType="textPersonName"
...
        android:layout_alignTop="@+id/editPasswordLogin"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:background="#B8A3A3"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:text="Einloggen"
        android:textAlignment="center"
        android:textColor="#372F2F"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />
...
