...
        android:layout_height="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:text="Scannen"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Scannen" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="Termine"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnInventory"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Gerät suchen" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="140dp"
...
