...
    <string name="textFilterByStatus">Filtern nach Status</string>
    <string name="textFilterByTuevPeriod">TÜV Zeitraum auswählen</string>
    <string name="textStart">start</string>
    <string name="textConstruction">Baustelle</string>
    <string name="textReserve">reservieren</string>
    <string name="textEnd">Ende</string>
    <string name="textFilter">Filtern</string>
    <string name="textManufacturer">Hersteller</string>
    <string name="textManufacturerAdd">Hersteller*</string>
    <string name="textModel">Modell</string>
    <string name="textModelAdd">Modell*</string>
    <string name="textName">Name</string>
    <string name="textStreet">Straße</string>
    <string name="textDevice">Gerät</string>
    <string name="textMap">Maps</string>
    <string name="textEdit">Bearbeiten</string>
    <string name="textShowHistoryDevice">Versionsverlauf</string>
    <string name="textDelete">Löschen</string>
    <string name="textReloadList">Liste neu laden</string>
    <string name="textAddUser">Benutzer hinzufügen</string>
    <string name="password">Passwort</string>
    <string name="needHelpText">Brauchen Sie Hilfe?</string>

</resources>

