<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/activity_settings">

    <include
        android:id="@+id/toolbardevicecard"
        layout="@layout/toolbar_devicecard"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="564dp" />

    <ListView
        android:id="@+id/listOptions"
        android:layout_width="348dp"
        android:layout_height="537dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbardevicecardoldversion" />

</androidx.constraintlayout.widget.ConstraintLayout>